force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>All objects must have a Site Name and License Class or A or M. For separate sales and inventory record.</description>
    <label>Site</label>
    <nameField>
        <label>Site</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>