force-app/main/default/objects/Site__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active ?</label>
    <type>Checkbox</type>
</CustomField>