force-app/main/default/objects/Site__c/fields/Default_Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Default_Inventory_Location__c</fullName>
    <label>Default Inventory Location</label>
    <summaryFilterItems>
        <field>Inventory_Location__c.Default_for_Site__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory_Location__c.Site_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>