force-app/main/default/objects/Site__c/fields/License_Class__c.field-meta.xml
<CustomField>
    <fullName>License_Class__c</fullName>
    <formula>TEXT(License_ID__r.License_Class__c)</formula>
    <label>License Class</label>
    <type>Text</type>
</CustomField>