force-app/main/default/objects/Site__c/fields/License_ID__c.field-meta.xml
<CustomField>
    <fullName>License_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License ID</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>