force-app/main/default/objects/Site__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <formula>License_ID__r.License_Name__r.Name</formula>
    <label>License Name</label>
    <type>Text</type>
</CustomField>