force-app/main/default/objects/Site__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <formula>License_ID__r.License_Number__c</formula>
    <label>License Number</label>
    <type>Text</type>
</CustomField>