force-app/main/default/objects/Site__c/fields/Warehouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Name__c</fullName>
    <description>Name of the warehouse to display in UI. Example : Communities.</description>
    <label>Warehouse Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>