force-app/main/default/objects/Site__c/validationRules/Check_if_Default_for_site_more_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_if_Default_for_site_more_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>Default_Inventory_Location__c &gt; 1</errorConditionFormula>
    <errorMessage>Only One default Inventory Location is allowed for each Site</errorMessage>
</ValidationRule>